--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="permission_default_dialog_bg">#fff</color>
+    <color name="permission_split_line">#e0e0e0</color>
+    <color name="permission_tint_color">#1972e8</color>
+    <color name="permission_text_color">#212121</color>
 </resources>
