--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/btnRequestPermission"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Request Camera Permission"
+        android:text="Request  Permissions"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
