--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PermissionLib" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.PermissionLib.2" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+        <!-- Use your custom colors -->
+        <item name="colorPrimary">@color/permission_tint_color</item>
+        <item name="colorPrimaryVariant">@color/permission_tint_color</item>
+        <item name="colorOnPrimary">@color/permission_text_color</item>
+        <item name="colorSecondary">@color/permission_default_dialog_bg</item>
+
+        <item name="colorOnSecondary">@color/permission_text_color</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
